# beatr

./: CLAUDE.md  Cargo.toml  README.md  Trunk.toml  example_project.beatr  index.html
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
docs/prd/: Epic-2-Application-Usability.md
docs/stories/: 1.1.additional-drum-samples.md  1.10.audio-engine-buffer-clearing.md  1.11.rim-sound-and-track-preview-fix.md  1.2.variable-loop-lengths.md  1.3.time-signature-visualization.md  1.4.timeline-composition.md  1.5.timeline-segment-snapping-cleanup.md  1.6.timeline-ux-enhancement-brownfield.md  1.7.time-signature-restoration-enhancement.md  1.8.segment-visualization-enhancement.md  1.9.ui-layout-optimization.md  2.1.settings-infrastructure.md  2.2.audio-device-configuration.md  2.3.ui-themes-and-appearance.md  2.4.default-project-settings.md  2.5.core-keyboard-shortcuts.md  2.6.customizable-keyboard-shortcuts.md
src/: main.rs  project.rs  settings.rs
src/audio/: engine.rs  mod.rs  samples.rs  sequencer.rs
src/timeline/: mod.rs
src/ui/: app.rs  mod.rs
src/ui/components/: loop_length_control.rs  mod.rs  pattern_grid.rs  settings_dialog.rs  tempo.rs  time_signature_control.rs  timeline_view.rs  transport.rs
