[package]
name = "beatr"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A drum track/loop composer built with Rust and egui"
license = "MIT OR Apache-2.0"

[dependencies]
# GUI
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# Audio
cpal = "0.15"
fundsp = "0.18"
hound = "3.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.11"

# Additional egui features
egui_extras = { version = "0.28", features = ["default", "all_loaders"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native only dependencies
rfd = "0.14" # File dialogs

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Web only dependencies
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

# Web build optimizations
[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]